// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check Slider snapshots collection is Slider render right if isDisabled set true? 1`] = `
<div
  class="slider-wrapper"
>
  <div
    class="slider-container disabled"
    style="position: relative;"
  >
    <div
      class="slider-track active"
      style="position: absolute; left: 0px; right: 0px;"
    />
    <div
      class="slider-track"
      style="position: absolute; left: 0px; right: 0px;"
    />
    <div
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="slider-handle slider-handle-0 "
      role="slider"
      style="position: absolute; z-index: 1; left: 0px;"
      tabindex="0"
    />
  </div>
  <div
    class="slider-label-container"
  >
    <span
      class="slider-label"
    >
      0
       
      <span />
    </span>
    <span
      class="slider-label"
    >
      100
       
      <span />
    </span>
  </div>
</div>
`;

exports[`Check Slider snapshots collection is Slider render right if set value? 1`] = `
<div
  class="slider-wrapper"
>
  <div
    class="slider-container"
    style="position: relative;"
  >
    <div
      class="slider-track active"
      style="position: absolute; left: 0px; right: 0px;"
    />
    <div
      class="slider-track"
      style="position: absolute; left: 0px; right: 0px;"
    />
    <div
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="slider-handle slider-handle-0 "
      role="slider"
      style="position: absolute; z-index: 1; left: 0px;"
      tabindex="0"
    />
  </div>
  <div
    class="slider-label-container"
  >
    <span
      class="slider-label"
    >
      0
       
      <span />
    </span>
    <span
      class="slider-label"
    >
      100
       
      <span />
    </span>
  </div>
</div>
`;

exports[`Check Slider snapshots collection is Slider render right? 1`] = `
<div
  class="slider-wrapper"
>
  <div
    class="slider-container"
    style="position: relative;"
  >
    <div
      class="slider-track active"
      style="position: absolute; left: 0px; right: 0px;"
    />
    <div
      class="slider-track"
      style="position: absolute; left: 0px; right: 0px;"
    />
    <div
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="slider-handle slider-handle-0 "
      role="slider"
      style="position: absolute; z-index: 1; left: 0px;"
      tabindex="0"
    />
  </div>
  <div
    class="slider-label-container"
  >
    <span
      class="slider-label"
    >
      0
       
      <span />
    </span>
    <span
      class="slider-label"
    >
      100
       
      <span />
    </span>
  </div>
</div>
`;
